apply last 2 commits but with nfvo_server
